infra/k8s/ingress.yml
---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ref-implementatie
  namespace: zgw
  labels:
    app.kubernetes.io/instance: zgw-stable
    app.kubernetes.io/name: zgw
spec:
  rules:
  # Continuous deployment, in-cluster
  - host: deploy-bot-zgw.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: deploy
            servicePort: 8000
  # Documentation
  - host: zaakgerichtwerken.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: docs
            servicePort: 80
  # ZRC
  - host: zaken-api.vng.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: zrc
          servicePort: 8000
  # DRC
  - host: documenten-api.vng.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: drc
          servicePort: 8000
  # ZTC
  - host: catalogi-api.vng.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: ztc
          servicePort: 8000
  # AC
  - host: autorisaties-api.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: ac
            servicePort: 8000
  # BRC
  - host: besluiten-api.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: brc
            servicePort: 8000
  # NRC
  - host: notificaties-api.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: nrc
            servicePort: 8000

  # Referentielijsten/selectielijst
  - host: referentielijsten-api.vng.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: vrl
          servicePort: 8000

  # Token tool
  - host: zaken-auth.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: token-issuer
            servicePort: 8000

  # Demo
  - host: zgw-demo.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: demo
            servicePort: 8000

  # Klantinteracties
  - host: klantinteracties-api.vng.cloud
    http:
      paths:
        - path: /
          backend:
            serviceName: kic
            servicePort: 8000

  tls:
    - hosts:
        - deploy-bot-zgw.vng.cloud
        - zaakgerichtwerken.vng.cloud
        - zaken-api.vng.cloud
        - documenten-api.vng.cloud
        - catalogi-api.vng.cloud
        - autorisaties-api.vng.cloud
        - besluiten-api.vng.cloud
        - notificaties-api.vng.cloud
        - referentielijsten-api.vng.cloud
        - zaken-auth.vng.cloud
        - zgw-demo.vng.cloud
        - klantinteracties-api.vng.cloud
